filter button gap fix

--- a/src/pages/RestaurantsPage/RestaurantsPage.module.scss
+++ b/src/pages/RestaurantsPage/RestaurantsPage.module.scss
@@ -47,6 +47,7 @@
         justify-content: space-between;
         align-items: center;
         width: 100%;
+        gap: 21px;
         @include smallDesktopScreen {
           display: flex;
           flex-flow: row;
@@ -119,5 +120,3 @@
     }
   }
 }
-
-
